css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  position: relative;
  height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
}

body {
  background: #000000;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #000;
  /* margin: 0;
  padding: 0; */
}

/* Container to add animation to have page slide in when loaded */
/* This page-content will have first slide come up from bottom. */
/* Fade swiper slide-in animation */
.page-content {
  opacity: 0;
  position: relative;
  top: 100vh;
  animation: fade-slide-in 0.2s forwards;
}

@keyframes fade-slide-in {
  to {
    opacity: 1;
    top: 0;
  }
}

/* This page-content will have first slide come up from right side. */
/* .page-content {
  opacity: 0;
  transform: translateX(100%);
  animation: slide-in 0.2s forwards;
}

@keyframes slide-in {
  to {
    opacity: 1;
    transform: translateX(0);
  }
} */

/* Animate the first slide content */
.first-slide .link-main-page-container,
.first-slide .title-row,
.first-slide .title-row-bottom {
  opacity: 0;
  transform: translateY(100%);
  animation: vertical-slide-in 0.2s forwards;
  animation-delay: 0.1s; /* Adjust delay for smooth appearance */
}

@keyframes vertical-slide-in {
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Prevent any scrollbars */
::-webkit-scrollbar {
  display: none;
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  background-color: black;
  height: 100svh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Title Row */
.title-row {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  cursor: default;
  overflow: visible;
}

/* Close Button Styles */
.close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  left: 9px;
  cursor: pointer;
  border: none;
  position: relative;
}

/* The lines of the "X".*/
.close-btn .x-line::before,
.close-btn .x-line::after {
  content: "";
  position: absolute;
  width: 18px;
  height: 2px;
  background-color: white;
  top: 50%;
  left: 50%;
  transform-origin: center;
}

/* First line of the 'X' */
.close-btn .x-line::before {
  transform: translate(-50%, -50%) rotate(45deg);
}

/* Second line of the 'X' */
.close-btn .x-line::after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off  */
.close-btn::before {
  content: "";
  position: absolute;
  top: -10px;
  bottom: -10px;
  left: -10px;
  right: -10px;
  background: transparent;
}

.title-row .close-btn,
.title-row .options-btn {
  position: absolute;
}

.pencil-title-row {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
}

.pencil-container {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off  */
.pencil-container::before,
.title-row .add-new-caption::before {
  content: "";
  position: absolute;
  top: -14px;
  bottom: -14px;
  left: -14px;
  right: -10px;
  z-index: 100;
}

.title-row .pencil {
  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5))
    drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
  cursor: pointer;
  height: 18px;
  width: auto;
  margin-right: -14px;
  position: relative;
  z-index: 200;
}

.title-row .add-new-caption {
  position: relative;
  cursor: pointer;
  z-index: 200;
  display: inline-block;
  padding: 14px;
}

.title-row .media-item-title {
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: white;
  letter-spacing: 0.04rem;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  margin-left: 10px;
  margin-right: 10px;
}

.options-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  right: 9px;
  cursor: pointer;
  border: none;
  gap: 0.158rem;
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off */
.title-row .options-btn::before {
  content: "";
  position: absolute;
  top: -10px;
  bottom: -10px;
  left: -10px;
  right: -10px;
  background: transparent;
  z-index: 100;
}

.dot {
  width: 4px;
  height: 4px;
  background-color: white;
  border-radius: 50%;
}

/* Bottom Footer */
.title-row-bottom {
  height: 60px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -18px;
}

.number-of-items-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 14px;
  position: absolute;
  right: 9px;
  border: none;
}

.number-of-items-text {
  color: white;
  letter-spacing: 0.09rem;
  padding-right: 8px;
  padding-left: 8px;
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
}

.landscape-img {
  width: 100vw;
  height: auto;
  max-height: 100svh;
  object-fit: contain;
  display: block;
}

/* Vertical Swiper */
/* Changes color of all pagination bullets*/
/* .swiper-pagination-bullet {
  background-color: rgba(255, 255, 255, 0.9);
  border: 1px solid rgba(178, 178, 178, 0.9);
} */

/* Changes color of the active pagination bullet */
/* .swiper-pagination-bullet-active {
  background-color: #ffffff;
} */
/* ... */

